<resources>
    <string name="app_name">WebEngage</string>
    <string name="create_account">Create account</string>
    <string name="enter_your_passoward">Enter your passoward</string>
    <string name="already_have_an_acconut">Already have an acconut?</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="email">Email</string>
    <string name="enter_your_last_name">Enter your last name</string>
    <string name="last_name">Last name</string>
    <string name="enter_your_first_name">Enter your first name</string>
    <string name="first_name">First Name</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="new_to_weengage">New to WeEngage</string>
    <string name="forgot_password_text">We will send an email with a new link to sign in</string>
    <string name="reset_password">Reset password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_us_text">WebEngage was established with the objective of enabling businesses to create personalized experiences at a massive scale. Every journey begins with a small step. Ours started with the aim of making marketing more real! We help brands put the human element back in their campaigns to create user engagement that feels real, just like talking to a friend. Co-founders Avlesh Singh and Ankit Utreja drive the team to keep hustling on our journey toward disrupting the traditional ways of marketing. WebEngage is a customer data platform and marketing automation suite that makes user engagement and retention simplified and highly effective for consumer tech enterprises and SMBs. The platform helps brands drive more revenue from their existing customers and anonymous users through highly contextual, hyper-personalized engagement campaigns across 10 communication channels. Product and marketing practitioners, across the world, design intuitive user lifecycle journeys on the WebEngage dashboard to convert existing users through data-backed, timely omnichannel engagement campaigns. The platform offers in-depth product and marketing analytics for brands to track growth metrics and campaign performance effectively. WebEngage is backed by some of the leading tech investors worldwide. We are headquartered in Mumbai, Maharashtra with offices across the globe in Gurugram, Bengaluru, São Paulo, Jakarta, and Dubai. We are a constantly expanding team of go-getters and game-changers!</string>
    <string name="home">Home</string>
    <string name="string">\@string/</string>
</resources>