<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="108dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/sign_in"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/sign_email_input"
            android:layout_width="301dp"
            android:layout_height="55dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp" />

        <EditText
            android:id="@+id/sign_password_input"
            android:layout_width="304dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/enter_your_passoward"
            android:inputType="textPassword"
            android:paddingStart="10dp" />

        <TextView
            android:id="@+id/sign_forgot_password_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="230dp"
            android:layout_marginTop="20dp"
            android:text="@string/forgot_password"
            android:textColor="#0077b5"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/sign_progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:foregroundGravity="center"
            android:visibility="gone"/>

        <Button
            android:id="@+id/sign_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="70dp"
            android:paddingLeft="50dp"
            android:paddingTop="10dp"
            android:paddingRight="50dp"
            android:paddingBottom="10dp"
            android:text="@string/login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="144dp"
            android:layout_marginTop="140dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:layout_marginStart="100dp"
                android:layout_weight="1"
                android:text="@string/new_to_weengage"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sign_create_account_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/create_account"
                android:textColor="#0077B5"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>